Update corelibs utils, package layouts and more